--- a/html/about.html
+++ b/html/about.html
@@ -11,8 +11,8 @@
 
 
   <!-- styling -->
-  <link rel="stylesheet" href="CSS/style.css">
-  <title>Home</title>
+  <link rel="stylesheet" href="../CSS/style.css">
+  <title>About</title>
 </head>
 
 <body>
@@ -32,27 +32,27 @@
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="./html/product.html">Products</a>
+            <a class="nav-link" href="../html/product.html">Products</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="./html/checkout.html">Checkout</a>
+            <a class="nav-link" href="../html/checkout.html">Checkout</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="./html/about.html">About</a>
+            <a class="nav-link" href="../html/about.html">About</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="./html/contact.html">Contact</a>
+            <a class="nav-link" href="../html/contact.html">Contact</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="./html/admin.html">Admin</a>
+            <a class="nav-link" href="../html/admin.html">Admin</a>
           </li>
 
         </ul>
@@ -63,42 +63,13 @@
 
   <main>
     
-    <section class="full-section-dimensions landing">
-
-    </section>
-
-    <section class="half-section-dimensions" id="latest">
-
-      <h2>Latest Additions</h2>
-
-      <div class="row">
-        <div class="col-3 bg-danger">a</div>
-        <div class="col-3 bg-success">a</div>
-        <div class="col-3 bg-danger">a</div>
-        <div class="col-3 bg-success">a</div>
-      </div>
-
-    </section>
-
-    <section class="full-section-dimensions">
-  
-    </section>
- 
   </main>
-
-
-
-
-
-
-
-
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
   </script>
 
-  <script src="script/code.js"></script>
+  <script src=""></script>
 </body>
 
 </html>
