--- a/html/about.html
+++ b/html/about.html
@@ -65,6 +65,27 @@
     
   </main>
 
+  <footer>
+    <div class="row">
+      <div class="col-4">
+        <p>42 Does Nexist</p>
+        <p>Cape Town, South Africa</p>
+        <p>7764</p>
+      </div>
+
+      <div class="col-4 copyright">
+        <p>Copyright &copy; <span currentYear></span></p>
+      </div>
+
+      <div class="col-4">
+        <p>Twitter</p>
+        <p>Instagram</p>
+        <p>Facebook</p>
+      </div>
+
+    </div>
+  </footer>
+  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
   </script>
