--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </div>
   </nav>
 
-  <main>
+  <main class="container-fluid">
     
     <section class="full-section-dimensions landing">
 
@@ -72,10 +72,11 @@
       <h2>Latest Additions</h2>
 
       <div class="row">
-        <div class="col-3 bg-danger">a</div>
-        <div class="col-3 bg-success">a</div>
-        <div class="col-3 bg-danger">a</div>
-        <div class="col-3 bg-success">a</div>
+        <div class="d-flex justify-content-evenly">
+          <div class="col-3 bg-danger">a</div>
+          <div class="col-3 bg-success">a</div>
+          <div class="col-3 bg-danger">a</div>
+        </div>
       </div>
 
     </section>
@@ -87,6 +88,26 @@
   </main>
 
 
+  <footer>
+    <div class="row">
+      <div class="col-4">
+        <p>42 Does Nexist</p>
+        <p>Cape Town, South Africa</p>
+        <p>7764</p>
+      </div>
+
+      <div class="col-4 copyright">
+        <p>Copyright &copy; <span currentYear></span></p>
+      </div>
+
+      <div class="col-4">
+        <p>Twitter</p>
+        <p>Instagram</p>
+        <p>Facebook</p>
+      </div>
+
+    </div>
+  </footer>
 
 
 
