--- a/index.html
+++ b/index.html
@@ -63,8 +63,26 @@
 
   <main class="container-fluid">
     
-    <section class="full-section-dimensions landing">
+    <section class="full-section-dimensions">
 
+<div>
+
+  <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active" data-bs-pause="false" data-bs-interval="2000">
+        <img src="https://ismaaeel-a.github.io/allimages/Images/OP_cover.png" class="d-block " alt="...">
+      </div>
+      <div class="carousel-item" data-bs-pause="false" data-bs-interval="2000">
+        <img src="https://ismaaeel-a.github.io/allimages/Images/naruto_cover.png" class="d-block " alt="...">
+      </div>
+      <div class="carousel-item" data-bs-pause="false" data-bs-interval="2000">
+        <img src="https://ismaaeel-a.github.io/allimages/Images/bleach_cover.png" class="d-block " alt="...">
+      </div>
+    </div>
+  </div>
+  
+</div>
+      
     </section>
 
     <section class="half-section-dimensions" id="latest">
@@ -108,11 +126,6 @@
 
     </div>
   </footer>
-
-
-
-
-
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
