--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
 
-  <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
+  <nav class="navbar navbar-expand-lg  sticky-top">
 
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
@@ -32,7 +32,7 @@
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link" aria-current="page" href="#">Home</a>
           </li>
 
           <li class="nav-item">
@@ -64,28 +64,26 @@
   <main class="container-fluid">
     
     <section class="full-section-dimensions">
+      <div class="row">
+        <div class=" col-lg-8 bg-danger height welcome">
+          <h1>Welcome to The Game Haven</h1>
+        </div>
+        <div class="col-lg-4 bg-success height"></div>
+      </div>
 
-<div>
+      <div class="row">
+        <div class="col-lg-6 bg-warning height"></div>
+        <div class="col-lg-6 bg-primary height"></div>
+      </div>
 
-  <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active" data-bs-pause="false" data-bs-interval="2000">
-        <img src="https://ismaaeel-a.github.io/allimages/Images/OP_cover.png" class="d-block " alt="...">
+      <div class="row">
+        <div class="col-12 bg-info height"></div>
+
       </div>
-      <div class="carousel-item" data-bs-pause="false" data-bs-interval="2000">
-        <img src="https://ismaaeel-a.github.io/allimages/Images/naruto_cover.png" class="d-block " alt="...">
-      </div>
-      <div class="carousel-item" data-bs-pause="false" data-bs-interval="2000">
-        <img src="https://ismaaeel-a.github.io/allimages/Images/bleach_cover.png" class="d-block " alt="...">
-      </div>
-    </div>
-  </div>
-  
-</div>
       
     </section>
 
-    <section class="half-section-dimensions" id="latest">
+ <!--    <section class="half-section-dimensions" id="latest">
 
       <h2>Latest Additions</h2>
 
@@ -97,11 +95,7 @@
         </div>
       </div>
 
-    </section>
-
-    <section class="full-section-dimensions">
-  
-    </section>
+    </section> -->
  
   </main>
 
