--- a/html/product.html
+++ b/html/product.html
@@ -11,13 +11,14 @@
 
 
   <!-- styling -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="../CSS/style.css">
   <title>Products</title>
 </head>
 
 <body>
 
-  <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
+  <nav class="navbar navbar-expand-lg sticky-top">
 
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
@@ -62,7 +63,16 @@
   </nav>
 
   <main>
-    
+    <section class="full-section-dimensions" >
+      <h2>Products</h2>
+      <div>
+        <input type="text" placeholder="search..." search>
+        <button type="button"></button>
+      </div>
+      <div class="row" ItemDisplay>
+
+      </div>
+    </section>
   </main>
 
   <footer>
@@ -90,7 +100,7 @@
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
   </script>
 
-  <script src=""></script>
+  <script src="../script/product.js"></script>
 </body>
 
 </html>
