--- a/html/about.html
+++ b/html/about.html
@@ -17,7 +17,7 @@
 
 <body>
 
-  <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
+  <nav class="navbar navbar-expand-lg sticky-top">
 
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
