--- a/html/contact.html
+++ b/html/contact.html
@@ -17,7 +17,7 @@
 
 <body>
 
-  <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
+  <nav class="navbar navbar-expand-lg sticky-top">
 
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
@@ -223,7 +223,7 @@
   </main>
 
   <footer>
-  <!--   <div class="row"> -->
+    <div class="row">
       <div class="col-4">
         <p>42 Does Nexist</p>
         <p>Cape Town, South Africa</p>
@@ -240,7 +240,7 @@
         <p>Facebook</p>
       </div>
 
-<!--     </div> -->
+    </div>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
